add swagger & fix status change
