# pkg/resequip.pb.gw.go
@@ -309,6 +309,40 @@ func local_request_IncidentService_CommentOnIncident_0(ctx context.Context, mars
 
 }
 
+func request_IncidentService_CreateEquipment_0(ctx context.Context, marshaler runtime.Marshaler, client IncidentServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq EquipmentCreate
+	var metadata runtime.ServerMetadata
+
+	newReader, berr := utilities.IOReaderFactory(req.Body)
+	if berr != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", berr)
+	}
+	if err := marshaler.NewDecoder(newReader()).Decode(&protoReq); err != nil && err != io.EOF {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := client.CreateEquipment(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+
+}
+
+func local_request_IncidentService_CreateEquipment_0(ctx context.Context, marshaler runtime.Marshaler, server IncidentServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq EquipmentCreate
+	var metadata runtime.ServerMetadata
+
+	newReader, berr := utilities.IOReaderFactory(req.Body)
+	if berr != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", berr)
+	}
+	if err := marshaler.NewDecoder(newReader()).Decode(&protoReq); err != nil && err != io.EOF {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := server.CreateEquipment(ctx, &protoReq)
+	return msg, metadata, err
+
+}
+
 func request_IncidentService_CreateEquipmentIncident_0(ctx context.Context, marshaler runtime.Marshaler, client IncidentServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
 	var protoReq EquipmentIncidentCreate
 	var metadata runtime.ServerMetadata
@@ -685,6 +719,26 @@ func RegisterIncidentServiceHandlerServer(ctx context.Context, mux *runtime.Serv
 
 	})
 
+	mux.Handle("POST", pattern_IncidentService_CreateEquipment_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		rctx, err := runtime.AnnotateIncomingContext(ctx, mux, req)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_IncidentService_CreateEquipment_0(rctx, inboundMarshaler, server, req, pathParams)
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_IncidentService_CreateEquipment_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
 	mux.Handle("POST", pattern_IncidentService_CreateEquipmentIncident_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
@@ -986,6 +1040,26 @@ func RegisterIncidentServiceHandlerClient(ctx context.Context, mux *runtime.Serv
 
 	})
 
+	mux.Handle("POST", pattern_IncidentService_CreateEquipment_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		rctx, err := runtime.AnnotateContext(ctx, mux, req)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_IncidentService_CreateEquipment_0(rctx, inboundMarshaler, client, req, pathParams)
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_IncidentService_CreateEquipment_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
 	mux.Handle("POST", pattern_IncidentService_CreateEquipmentIncident_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
@@ -1160,6 +1234,8 @@ var (
 
 	pattern_IncidentService_CommentOnIncident_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 1, 0, 4, 1, 5, 1, 2, 2}, []string{"incident", "incident_id", "comment"}, "", runtime.AssumeColonVerbOpt(true)))
 
+	pattern_IncidentService_CreateEquipment_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0}, []string{"equipment"}, "", runtime.AssumeColonVerbOpt(true)))
+
 	pattern_IncidentService_CreateEquipmentIncident_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"incident", "equipment"}, "", runtime.AssumeColonVerbOpt(true)))
 
 	pattern_IncidentService_ListEquipment_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0}, []string{"equipment"}, "", runtime.AssumeColonVerbOpt(true)))
@@ -1187,6 +1263,8 @@ var (
 	forward_IncidentService_ChangeIncidentStatus_0 = runtime.ForwardResponseMessage
 
 	forward_IncidentService_CommentOnIncident_0 = runtime.ForwardResponseMessage
+
+	forward_IncidentService_CreateEquipment_0 = runtime.ForwardResponseMessage
 
 	forward_IncidentService_CreateEquipmentIncident_0 = runtime.ForwardResponseMessage
 
